test_report.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

.App {
  width: 100%;
  font-family: Tahoma, Verdana, sans-serif;
  font-size: 12px;
}

/*APP HEADING */
.test-report-header {
  background-color: #282c34;
  width: 100%;
  height: auto;
  font-size: 8px;
  color: white;
  padding: 0.5rem 0rem 0.5rem 1.2rem;
}

/* NAVIGATION BAR WITH FILTER*/
.navigation {
  display: flex;
  padding: 0.4rem 0.4rem 0.4rem 1rem;
  background-color: #dae1e7;
  width: 100%;
}

.test-filter {
  width: 100%;
  display: flex;
  flex-direction: column;
}
fieldset {
  border: transparent;
}
legend {
  font-weight: 700;
  margin-bottom: 0.2rem;
}
.filter-item {
  margin-right: 1rem;
}

input {
  position: relative;
  top: 1px;
  margin-left: 0.1rem;
}

/* MAIN APP CONTAINER WITH 2 SECTIONS */
.section-container {
  display: grid;
  width: 100%;
  grid-template-columns: 50% 50%;
}

/* SECTIONS */
.content-section,
.display-section {
  width: 100%;
  padding: 1rem;
  height: 100%;
  overflow: scroll;
  overflow-x: hidden;
}

.display-section {
  background-color: #f9f9f9;
  min-height: 100vh;
}

/* CONTENT SECTION ELEMENTS (LEFT PART) */
.content-header {
  display: grid;
  grid-template-columns: 75% 1fr 1fr;
  font-size: 10px;
  text-align: center;
  background-color: lightgray;
}

.content-header > span {
  background-color: white;
  margin: 1px;
  padding: 0.3rem;
}

.node-container {
  display: grid;
  grid-template-columns: 75% 1fr 1fr;
  grid-gap: 10px;
  margin-bottom: 2px;
  cursor: pointer;
  border-radius: 5px;
  align-items: center;
  justify-items: center;
}

.node-container:hover {
  background-color: #e1e8ed;
}

.node-title {
  padding: 3px 0px 3px 0px;
  width: 100%;
  word-break: break-all;
}

.node-child {
  margin-left: 15px;
}
.duration {
}

.iconFail {
  color: red;
  margin-left: 3px;
  margin-right: 3px;
}

.iconSuccess {
  color: green;
  margin-left: 3px;
  margin-right: 3px;
}

.iconIgnored {
  color: grey;
  margin-left: 3px;
  margin-right: 3px;
}
.bgr-grey {
  border-radius: 5px;
  background: rgba(163, 177, 198, 0.1);
  box-shadow: 0px 0px 5px grey;
}

